Fixes active state on mobile menu.

--- a/assets/stylesheets/print.scss
+++ b/assets/stylesheets/print.scss
@@ -38,7 +38,7 @@ body {
 }
 
 @page {
-  margin: .75in 1.5in;
+  margin: 0.75in 1.5in;
 }
 
 .production-guide-logo  {
@@ -86,7 +86,6 @@ section {
     }
   }
 }
-
 
 h1, h2, h3, h4, h5, h6 {
   page-break-after: avoid;
